@@ -34,6 +34,7 @@ Changes in JMurmel-1.3 relative to JMurmel-1.2.2
  * fixed mlib: avoid possible stackoverflows when looping over larger sequences
    * remove, remove-if
    * mapcar, maplist, mapc, mapl, mapcan, mapcon
+ * fixed mlib: fixed notevery, notany
 
 
 Changes in JMurmel-1.2.2 relative to JMurmel-1.2.1
